Added research-output for projects

--- a/univie_pure/Resources/Private/Language/de.locallang.xlf
+++ b/univie_pure/Resources/Private/Language/de.locallang.xlf
@@ -80,7 +80,7 @@
 				<target>Mehr...</target>
 			</trans-unit>
 			<trans-unit id="univiepur.searchForm">
-				<source>Filter resultset:</source>
+				<source>Filter results:</source>
 				<target>Ergebnisse filtern:</target>
 			</trans-unit>
 			<trans-unit id="univiepur.searchSubmit">
