--- a/univie_pure/Resources/Private/Language/locallang.xlf
+++ b/univie_pure/Resources/Private/Language/locallang.xlf
@@ -57,6 +57,9 @@
 			<trans-unit id="univiepur.publication.portalUrl">
 				<source>Portal url</source>
 			</trans-unit>
+			<trans-unit id="univiepur.publication.electronicVersions">
+				<source>Electronic versions</source>
+			</trans-unit>
 			<trans-unit id="univiepur.more">
 				<source>More...</source>
 			</trans-unit>
